Fix bug with embeds overflowing content width

--- a/assets/css/components/ghost.css
+++ b/assets/css/components/ghost.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-width: 100%;
+    width: 100%;
 }
 
 .kg-image {
